--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -34,14 +34,13 @@ header .contact span{
 }
 /*Header Section End*/
 
-/*Main Section Start*/
+/*Banner Section Start*/
 main{
     color: #fff;
     width: 100%;
     height: 550px;
     padding: 0px 100px;
-    background: url(../img/Industrial-Regions-and-Their-Characteristics-in-India.webp);
-    opacity: rgba(0,0,0,0.8), rgba(255,0,0,0.5);
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/Industrial-Regions-and-Their-Characteristics-in-India.png);
     background-size: cover;
     background-position: center center;
     display: flex;
@@ -53,10 +52,59 @@ main form{
     padding: 12px;
     border-radius: 10px;
 }
-main form input{
-    height: 40px;
+main form input, button{
+    height: 45px;
     margin: 2px 0px;
     text-align: center;
     text-transform: capitalize;
 }
+/*Banner Section End*/
+
+/*Main Section Start*/
+.main{
+    width:100%;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: space-between;
+}
+.innovation, .People .solution{
+    width: 30%;   
+}
+.main img{
+width: 300px;
+display: block;
+height: auto;
+}
+.main h2{
+    color: #002577;
+}
+.main p{
+    color: #002577;
+    display: inline-block; /* Keep image and text together */
+    text-align:left;    /* Center-align the text below the image */
+    width: 300px;  
+}
 /*Main Section End*/
+/*company detail start*/
+.company-details{
+    width: 100%;
+    padding: 0px 100px;
+}
+.company-details .top,
+.company-details .bottom{
+    display: flex;
+    justify-content: space-between;
+}
+.top div, .bottom div{
+    width:50%
+}
+div img{
+    width: 100%;
+}
+div.content{
+    padding: 100px;
+    text-align: left;
+
+}
+
+/*company detail start*/
